--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project>
     <groupId>org.sps.learning</groupId>
-    <artifactId>learning</artifactId>
+    <artifactId>spark-java8</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <name>spark</name>
     <packaging>jar</packaging>
@@ -96,6 +96,71 @@
                   <source>1.8</source>
                   <target>1.8</target>
               </configuration>
+          </plugin>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-dependency-plugin</artifactId>
+              <version>2.8</version>
+              <executions>
+                  <execution>
+                      <id>copy-dependency</id>
+                      <phase>package</phase>
+                      <goals>
+                          <goal>copy-dependencies</goal>
+                      </goals>
+                      <configuration>
+                          <outputDirectory>${project.build.directory}/lib</outputDirectory>
+                          <overWriteReleases>true</overWriteReleases>
+                          <overWriteSnapshots>true</overWriteSnapshots>
+                          <overWriteIfNewer>true</overWriteIfNewer>
+                          <excludeTransitive>false</excludeTransitive>
+                      </configuration>
+                  </execution>
+              </executions>
+          </plugin>
+
+          <!--jar-->
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-jar-plugin</artifactId>
+              <version>2.4</version>
+              <configuration>
+                  <excludes>
+                      <exclude>**/test</exclude>
+                      <exclude>**/test/*.class</exclude>
+                  </excludes>
+                  <archive>
+                      <manifest>
+                          <addClasspath>true</addClasspath>
+                          <classpathPrefix>lib</classpathPrefix>
+                          <useUniqueVersions>false</useUniqueVersions>
+                      </manifest>
+                      <manifestEntries>
+                          <Class-Path>./conf/</Class-Path>
+                      </manifestEntries>
+                  </archive>
+              </configuration>
+          </plugin>
+
+          <!--assembly to zip-->
+          <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <version>2.4</version>
+              <configuration>
+                  <appendAssemblyId>false</appendAssemblyId>
+                  <descriptors>
+                      <descriptor>${project.basedir}/src/assembly/assembly.xml</descriptor>
+                  </descriptors>
+              </configuration>
+              <executions>
+                  <execution>
+                      <id>assembly</id>
+                      <phase>package</phase>
+                      <goals>
+                          <goal>single</goal>
+                      </goals>
+                  </execution>
+              </executions>
           </plugin>
           </plugins>
   </build>
