--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,17 @@
           <version>4.11</version>
       </dependency>
 
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.3.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpcore</artifactId>
+          <version>4.3.1</version>
+      </dependency>
+
   </dependencies>
 
   <build>
