--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,16 @@
       <!-- Spark dependency -->
       <dependency>
           <groupId>org.apache.spark</groupId>
-          <artifactId>spark-core_2.10</artifactId>
-          <version>1.5.1</version>
+          <artifactId>spark-core_2.11</artifactId>
+          <version>2.2.0</version>
+          <scope>compile</scope>
       </dependency>
 
       <dependency>
           <groupId>org.scala-lang</groupId>
           <artifactId>scala-library</artifactId>
-          <version>2.10.0</version>
+          <version>2.11.8</version>
+          <scope>compile</scope>
       </dependency>
 
 	  <dependency>
