changes in the pom versions

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <properties>
         <java.version>1.8</java.version>
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
+        <spark.version>2.1.0</spark.version>
+        <spark-twitter.version>2.0.0</spark-twitter.version>
     </properties>
 
   <dependencies>
@@ -18,7 +20,28 @@
       <dependency>
           <groupId>org.apache.spark</groupId>
           <artifactId>spark-core_2.11</artifactId>
-          <version>2.2.0</version>
+          <version>${spark.version}</version>
+          <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-sql_2.11</artifactId>
+          <version>${spark.version}</version>
+          <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-streaming_2.11</artifactId>
+          <version>${spark.version}</version>
+          <scope>compile</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.bahir</groupId>
+          <artifactId>spark-streaming-twitter_2.11</artifactId>
+          <version>${spark-twitter.version}</version>
           <scope>compile</scope>
       </dependency>
 
@@ -53,20 +76,6 @@
       </dependency>
 
       <dependency>
-          <groupId>org.apache.spark</groupId>
-          <artifactId>spark-streaming_2.10</artifactId>
-          <version>1.6.1</version>
-          <scope>compile</scope>
-      </dependency>
-
-      <dependency>
-          <groupId>org.apache.spark</groupId>
-          <artifactId>spark-streaming-twitter_2.11</artifactId>
-          <version>1.6.2</version>
-          <scope>compile</scope>
-      </dependency>
-
-      <dependency>
           <groupId>org.twitter4j</groupId>
           <artifactId>twitter4j-core</artifactId>
           <version>4.0.5</version>
@@ -80,12 +89,7 @@
           <scope>compile</scope>
       </dependency>
 
-      <dependency>
-          <groupId>org.apache.spark</groupId>
-          <artifactId>spark-sql_2.11</artifactId>
-          <version>1.6.1</version>
-          <scope>compile</scope>
-      </dependency>
+
 
   </dependencies>
 
