--- a/src/main/resources/twitter4j.properties
+++ b/src/main/resources/twitter4j.properties
@@ -1,5 +1,5 @@
-debug=true
-oauth.consumerKey=ojJhKNMdoRYI1qQoQK0y9fDht
-oauth.consumerSecret=nf7PxaHEjDC7xyaoIiqiOrWF0iXSO49bQWRnZ6zP0BrueBGaZs
-oauth.accessToken=780897374235262976-izLofR3HRRTdR5GcL7caGBvrZgz5hic
-oauth.accessTokenSecret=UB1iKn7wxb006ZySnJJKX7cUp4si4GikkSOueJbriNjA6
+debug=false
+oauth.consumerKey=VSUz6xbSKKiWQi2RkgNE4QHVs
+oauth.consumerSecret=a5cvJIpdfBt7AHyW70CECKAqzVwD17WBUZJNqgQceT6aSuxQWp
+oauth.accessToken=36059597-6fVyuva3htLUTCrGDPB9Aq3ipIXXYVN5aWzdKZIMH
+oauth.accessTokenSecret=UgTB7WrEXxZMokTv37wxLcFdYbfZxrgDdTlr2WBA7BFIg
