--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
       </dependency>
 
       <dependency>
+          <groupId>org.apache.spark</groupId>
+          <artifactId>spark-mllib_2.11</artifactId>
+          <version>${spark.version}</version>
+      </dependency>
+
+      <dependency>
           <groupId>org.scala-lang</groupId>
           <artifactId>scala-library</artifactId>
           <version>2.11.8</version>
