best logging system has been added

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -28,3 +28,5 @@ log4j.logger.spark.MapOutputTrackerActor=INFO, RollingAppender
 log4j.additivity.spark.MapOutputTrackerActor=false
 log4j.logger.spark.MapOutputTracker=INFO, RollingAppender
 log4j.additivty.spark.MapOutputTracker=false
+log4j.org.sps.learning.spark.algorithms=DEBUG
+log4j.logger.org.apache.spark.executor=DEBUG
